<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@drawable/background_cron"
  android:orientation="vertical">
    
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:gravity="center"
    android:text="@string/set_device_title"
    android:textColor="@color/onCardBackground"
    android:textSize="@dimen/middleFont" />

  <GridLayout
    android:id="@+id/button_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="15dp"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <Button
      android:id="@+id/button_change"
      android:layout_width="match_parent"
      android:background="@drawable/background_cron"
      android:backgroundTint="@color/alert"
      android:layout_marginBottom="15dp"
      android:gravity="center"
      android:text="@string/set_device_button_change"
      android:textColor="@color/onAlert"
      android:textSize="@dimen/smallFont" />

    <Button
      android:id="@+id/button_delete"
      android:layout_width="match_parent"
      android:background="@drawable/background_cron"
      android:backgroundTint="@color/alert"
      android:gravity="center"
      android:text="@string/set_device_button_delete"
      android:textColor="@color/onAlert"
      android:textSize="@dimen/smallFont" />

  </GridLayout>
  
  <Button
    android:id="@+id/button_start_wireless"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@drawable/background_cron"
    android:backgroundTint="@color/button"
    android:gravity="center"
    android:text="@string/set_device_button_start_wireless"
    android:textColor="@color/onButton"
    android:textSize="@dimen/smallFont"
    android:layout_marginStart="18dp"
    android:layout_marginEnd="18dp"
    android:layout_marginBottom="18dp" />
  
</LinearLayout>
